# projector

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: README.md  benchmark_projector.py
examples/: example.py  models.pyi
examples/demo_example/: __init__.py  main.py  models.py  models.pyi
examples/fast_api_example/: README.md  __init__.py  db.py  domain_models.py  domain_models.pyi  main.py  query.py  sql_queries.py
examples/fast_api_example/api/: __init__.py  projects.py  projects.pyi  ui.py  users.py  users.pyi
examples/fast_api_example/http/: main.py  projects.py  projects.pyi  ui.py  ui.pyi  users.py  users.pyi
examples/fast_api_example/projects/: __init__.py  models.py  models.pyi  sql_queries.py
examples/fast_api_example/projects/api/: __init__.py  add_task.py  common.py  complete_task.py  create.py  delete.py  get.py  list.py  update.py
examples/fast_api_example/users/: models.py  models.pyi  sql_queries.py
examples/fast_api_example/users/api/: __init__.py  common.py  create.py  delete.py  get.py  list.py  rename_city.py  update.py
scripts/: generate_stubs.py
src/: pydantic.pyi  pytest.pyi
src/app/: __init__.py  cli.py  encode.py  example.py  ir.py  naming.py  projection.py  renderer.py  renderers.py  stubgen.py  views.py  views.pyi
src/app/inputs/: __init__.py  base.py  dataclass.py  plain.py  pydantic.py  typeddict.py
src/app/renderers/: __init__.py  attrs.py  dataclass.py  pydantic.py  typeddict.py
src/projector/: __init__.py  encode.py  ir.py  projection.py  renderer.py  stubgen.py  views.py
src/projector/inputs/: __init__.py  attrs.py  base.py  dataclass.py  plain.py  pydantic.py  typeddict.py
src/projector/renderers/: __init__.py  attrs.py  dataclass.py  pydantic.py  typeddict.py
src/python_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: helpers.py  test_annotated_metadata.py  test_api_attrs.py  test_api_dataclass.py  test_api_pydantic.py  test_api_typeddict.py  test_build_entity.py  test_cli.py  test_encode.py  test_fast_api_example.py  test_helpers.py  test_project_attrs.py  test_project_dataclass.py  test_project_pydantic.py  test_project_typeddict.py  test_projection.py  test_public_api.py  test_typecheck_generated_api.py  test_typecheck_views.py
