[project]
name = "projector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.2.0",
    "fastapi>=0.115.0",
    "pydantic>=2.13.4",
    "pytest>=8.4.2",
    "watchfiles>=1.1.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
projector = "projector.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = [
    ".",
    "src",
]

[tool.pyright]
pythonVersion = "3.12"
